--- a/BusTicketManagementSystem/BusTicketManagementSystem.csproj
+++ b/BusTicketManagementSystem/BusTicketManagementSystem.csproj
@@ -86,6 +86,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User_Controls\Available_Trip.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="User_Controls\Available_Trip.Designer.cs">
+      <DependentUpon>Available_Trip.cs</DependentUpon>
+    </Compile>
     <Compile Include="User_Controls\User_Dashboard.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -108,6 +114,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="User_Controls\Available_Trip.resx">
+      <DependentUpon>Available_Trip.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="User_Controls\User_Dashboard.resx">
       <DependentUpon>User_Dashboard.cs</DependentUpon>
     </EmbeddedResource>
